# KPEserver

./: Bestilling.cpp  Bestilling.h  CMakeLists.txt  KPEserver.pro  LoginDialog.cpp  LoginDialog.h  MainPage.cpp  MainPage.h  QMainApp.cpp  QMainApp.h  Server.cpp  Server.h  ServerDialog.cpp  ServerDialog.h  ServerStarter.cpp  ServerStarter.h  ServerThread.cpp  ServerThread.h  User.cpp  User.h  main.cpp
